@@ -1,0 +1,288 @@
+<?xml version="1.0" encoding="ISO-8859-1"?>
+
+<!DOCTYPE target SYSTEM "gdb-target.dtd">
+<target version="1.0">
+<architecture>ARCv2EM</architecture>
+<feature name="org.gnu.gdb.arc.auxregs">
+
+<!-- template
+    <register name="" number="0x" mask="0xFFFFFFFF" access="RW"
+              description="" />
+-->
+
+    <!-- Baseline regs, always present -->
+    <!-- baseline:curr state -->
+    <register name="IDENTITY" description="Identity" number="0x4" mask ="0xFFFFFFFF" access="RO">
+        <field name="CHIPID" description="unique chip identifier"     size="16" offset="16" access="RO" />
+        <field name="ARCNUM" description="additional identity number" size= "8" offset= "8" access="RO" />
+        <field name="ARCVER" description="basecase version number"    size= "8" offset= "0" access="RO" />
+    </register>
+    <register name="PC" description="program counter" number="0x6" mask ="0xFFFFFFFE" access="RW"/>
+    <register name="STATUS32" number="0xA" mask ="0x700FFFFF" access="RW" 
+        description="status flags">
+        <field name="H" description="halt bit" size="1"  offset= "0" access="RO">
+            <meaning value="1" description="processor is halted"/>
+        </field>
+        <field name="E"  size="3" offset="1"  access="RW" description="Interrupt priority operating level"/>
+        <field name="AE" size="1" offset="5"  access="RW" description="Core is in exception"/>
+        <field name="DE" size="1" offset="6"  access="RW" description="Delayed branch is pending"/>
+        <field name="U"  size="1" offset="7"  access="RW" description="User mode"/>
+        <field name="V"  size="1" offset="8"  access="RW" description="Overflow status flag"/>
+        <field name="C"  size="1" offset="9"  access="RW" description="Carry status flag"/>
+        <field name="N"  size="1" offset="10" access="RW" description="Negative status flag"/>
+        <field name="Z"  size="1" offset="11" access="RW" description="Zero status flag"/>
+        <field name="L"  size="1" offset="12" access="RW" description="Zero-overhead loop enable"/>
+        <field name="DZ" size="1" offset="13" access="RW" description="EV_DivZero exception enable"/>
+        <field name="SZ" size="1" offset="14" access="RW" description="Enbable statck checking"/>
+        <field name="ES" size="1" offset="15" access="RW" description="EI_S table instruction is pending"/>
+        <field name="RB" size="3" offset="16" access="RW" description="Select register bank"/>
+        <field name="AD" size="1" offset="19" access="RW" description="Disable alignment checking"/>
+        <field name="IE" size="1" offset="31" access="RW" description="Interrupt enable"/>
+    </register>
+    <register name="BTA" number="0x412" mask="0xFFFFFFFE" access="RW"
+            description="branch target address" />
+    <register name="ECR" description="exception cause register" number="0x403" mask="0xC0FFFFFF" access="RW">
+        <field name="parameter" size="8" offset="0" access="RW" description="parameter" />
+        <field name="cause" size="8" offset="8" access="RW" description="cause code" />
+        <field name="vector" size="8" offset="16" access="RW" description="vector number" />
+        <field name="U" size="1" offset="30" access="RW" description="u" />
+        <field name="P" size="1" offset="31" access="RW" description="p" />
+    </register>
+    <register name="INT_VECTOR_BASE" description="Interrupt Vector Base Register" number="0x25" mask ="0xFFFFFC00" access="RW" />
+
+    <!-- baseline: exception and interruipt state -->
+    <register name="ERET" description="exception return address" number="0x400" mask="0xFFFFFFFE" access="RW" />
+    <register name="ERBTA" description="exception return branch target address" number="0x401" mask="0xFFFFFFFE" access="RW" />
+    <register name="ERSTATUS" description="exception return status" number="0x402" mask="0x700FFFFF" access="RW">
+        <field name="H" description="halt bit" size="1"  offset= "0" access="RO">
+            <meaning value="1" description="processor is halted"/>
+        </field>
+        <field name="E"  size="3" offset="1"  access="RW" description="Interrupt priority operating level"/>
+        <field name="AE" size="1" offset="5"  access="RW" description="Core is in exception"/>
+        <field name="DE" size="1" offset="6"  access="RW" description="Delayed branch is pending"/>
+        <field name="U"  size="1" offset="7"  access="RW" description="User mode"/>
+        <field name="V"  size="1" offset="8"  access="RW" description="Overflow status flag"/>
+        <field name="C"  size="1" offset="9"  access="RW" description="Carry status flag"/>
+        <field name="N"  size="1" offset="10" access="RW" description="Negative status flag"/>
+        <field name="Z"  size="1" offset="11" access="RW" description="Zero status flag"/>
+        <field name="L"  size="1" offset="12" access="RW" description="Zero-overhead loop enable"/>
+        <field name="DZ" size="1" offset="13" access="RW" description="EV_DivZero exception enable"/>
+        <field name="SZ" size="1" offset="14" access="RW" description="Enbable statck checking"/>
+        <field name="ES" size="1" offset="15" access="RW" description="EI_S table instruction is pending"/>
+        <field name="RB" size="3" offset="16" access="RW" description="Select register bank"/>
+        <field name="AD" size="1" offset="19" access="RW" description="Disable alignment checking"/>
+        <field name="IE" size="1" offset="31" access="RW" description="Interrupt enable"/>
+    </register>
+    <!-- no EFA as ther is no MMU in EM SK
+    <register name="EFA" description="exception fault address" number="0x404" mask="0xFFFFFFFF" access="RW" />
+    -->
+
+    <!-- if lp_size>0 -->
+    <register name="LP_START" description="Loop Start" number="0x2" mask ="0xFFFFFFFE" access="RW" >
+        <field name="reserved" onwrite="0" size="1"  offset="0" access="RW" />
+    </register>
+    <register name="LP_END" description="Loop End" number="0x3" mask ="0xFFFFFFFE" access="RW" >
+        <field name="reserved" onwrite="0" size="1"  offset="0" access="RW" />
+    </register>
+
+    <!-- code density -->
+    <register name="JLI_BASE" number="0x290" mask="0xFFFFFFFC" access="RW"
+              description="Jump and Link Indexed Base Address" />
+    <register name="LDI_BASE" number="0x291" mask="0xFFFFFFFC" access="RW"
+              description="Load Indexed Base Address" />
+    <register name="EI_BASE" number="0x292" mask="0xFFFFFFFC" access="RW"
+              description="Execute Indexed Base Address" />
+   
+    <!-- debug feature -->
+    <register name="DEBUG"                description="Debug"                                       number="0x5"   mask ="0xF0800802" access="Rw">
+        <field name="FH" description="force halt"      size="1" offset="1"  access="WO"/>
+        <field name="IS" description="single step"     size="1" offset="11" access="RW">
+            <meaning value="1" description="single instruction stepping is in force"/>
+        </field>
+        <field name="EH" description="external halt"      size="1" offset="21"  access="RO"/>
+        <field name="RA" description="reset applied"      size="1" offset="22"  access="RW"/>
+        <field name="ZZ" description="sleep mode"      size="1" offset="23" access="RO">
+            <meaning value="1" description="processor is in sleep mode"/>
+        </field>
+        <field name="SM" description="sleep mode"      size="3" offset="24"  access="RO"/>
+        <field name="UB" description="user-mode breakpoint"      size="1" offset="28"  access="RO"/>
+        <field name="BH" description="breakpoint halt" size="1" offset="29" access="RO">
+            <meaning value="1" description="a BRK instruction has been triggered"/>
+        </field>
+        <field name="SH" description="self halt"       size="1" offset="30" access="RO">
+            <meaning value="1" description="processor has halted itself"/>
+        </field>
+        <field name="LD" description="load pending"    size="1" offset="31" access="RO">
+            <meaning value="1" description="a delayed load is waiting to complete"/>
+        </field>
+    </register>
+
+    <register name="DEBUGI" description="Debug register, interrupts/register banks" number="0xF" access="RW">
+        <field name="E"  size="1" offset="0" access="RW"
+               description="Enable exception or int vector functionality" />
+        <field name="RB" size="3" offset="16" access="RW"
+                description="Register Bank" />
+        <field name="RBE" siz="1" offset="19" access="RW" description="Register Bank Enable" />
+    </register>
+
+    <!-- Timer 0 -->
+    <register name="COUNT0"               description="Processor Timer 0 Count Value"               number="0x21"  mask ="0xFFFFFFFF" access="RW"/>
+    <register name="CONTROL0"             description="Processor Timer 0 Control Value"             number="0x22"  mask ="0x0000000F" access="RW" >
+     <field name="IE"  description="Interrupt Enable flag"  size="1"  offset="0" access="RW" >
+         <meaning value="1" description="interrupt will be generated after timer reaches limit condition"/>
+     </field>
+     <field name="NH"  description="Not Halted mode flag"   size="1"  offset="1" access="RW" >
+         <meaning value="0" description="timer counts every clock cycle"/>
+         <meaning value="1" description="timer counts clock cycles only when processor is running"/>
+     </field>
+     <field name="W"  description="Watchdog mode flag"      size="1"  offset="2" access="RW" >
+         <meaning value="1" description="system Reset signal will be generated after timer reaches limit condition"/>
+     </field>
+     <field name="IP"  description="Interrupt Pending flag" size="1"  offset="3" access="RW" >
+         <meaning value="0" description="timer 0 interrupt line is low"  />
+         <meaning value="1" description="timer 0 interrupt line is high" />
+     </field>
+    </register>
+    <register name="LIMIT0"               description="Processor Timer 0 Limit Value"               number="0x23"  mask ="0xFFFFFFFF" access="RW"/>
+
+    <!-- Timer 1 -->
+    <register name="COUNT1"               description="Processor Timer 1 Count Value"               number="0x100"  mask ="0xFFFFFFFF" access="RW"/>
+    <register name="CONTROL1"             description="Processor Timer 1 Control Value"             number="0x101"  mask ="0x0000000F" access="RW" >
+     <field name="IE"  description="Interrupt Enable flag"  size="1"  offset="0" access="RW" >
+         <meaning value="1" description="interrupt will be generated after timer reaches limit condition"/>
+     </field>
+     <field name="NH"  description="Not Halted mode flag"   size="1"  offset="1" access="RW" >
+         <meaning value="0" description="timer counts every clock cycle"/>
+         <meaning value="1" description="timer counts clock cycles only when processor is running"/>
+     </field>
+     <field name="W"  description="Watchdog mode flag"      size="1"  offset="2" access="RW" >
+         <meaning value="1" description="system Reset signal will be generated after timer reaches limit condition"/>
+     </field>
+     <field name="IP"  description="Interrupt Pending flag" size="1"  offset="3" access="RW" >
+         <meaning value="0" description="timer 0 interrupt line is low"  />
+         <meaning value="1" description="timer 0 interrupt line is high" />
+     </field>
+    </register>
+    <register name="LIMIT1"               description="Processor Timer 1 Limit Value"               number="0x102"  mask ="0xFFFFFFFF" access="RW"/>	
+
+    <!-- caches are not present in em4. might make sense for EM6 though -->
+    <register name="IC_IVIC" description="Instruction Cache Invalidation Register"
+        number="0x10" mask="0xFFFFFFFF" access="WO"/>
+    <register name="IC_CTRL" description="Instruction Cache Control Register"
+        number="0x11" mask="0x29" access="RW">
+        <field name="DC" size="1" offset="0" access="RW" description="Disable cache" />
+        <field name="SB" size="1" offset="3" access="RW" description="Success bit" />
+        <field name="AT" size="1" offset="5" access="RW" description="address debug type" />
+    </register>
+    <register name="IC_LIL" number="0x13" mask="0xFFFFFFFF" access="WO"
+		description="Lock Instruction Cache Line" />
+    <register name="IC_IVIL" number="0x19" mask="0xFFFFFFFF" access="WO"
+              description="Invalidate Instruction Cache Line" />
+    <register name="IC_RAM_ADDR" number="0x1A" mask="0xFFFFFFFF" access="RW"
+              description="Instruction Cache External Access RAM Address" />
+    <register name="IC_TAG" number="0x1B" mask="0xFFFFFFFF" access="RW"
+        description="Instruction cache Tag access" />
+    <register name="IC_DATA" number="0x1D" mask="0xFFFFFFFF" access="RW"
+              description="Instruction cache Data access" />
+    <register name="DC_IVDC" description="Data Cache Invalidation Register"
+        number="0x47" mask ="0x1" access="WO"/>
+    <register name="DC_CTRL" description="Data Cache Control Register"
+        number="0x48" mask ="0xFFFF0EE6" access="RW">
+        <field name="DC" size="1" offset="0" access="RW" description="Disable cache" />
+        <field name="SB" size="1" offset="2" access="RW" description="Success bit" />
+        <field name="AT" size="1" offset="5" access="RW" description="address debug type" />
+        <field name="IM" size="1" offset="6" access="RW" description="invalidate mode" />
+        <field name="LM" size="1" offset="7" access="RW" description="lock mode" />
+        <field name="FS" size="1" offset="8" access="RO" description="flush status" />
+    </register>
+    <register name="DC_FLSH" number="0x4B" mask="0x1" access="WO"
+              description="Flush Data Cache" />	
+    <register name="AUX_CACHE_LIMIT" number="0x5C" mask="0xFFFFFFFF" access="RW"
+              description="Start address of the first non-cached data region" />	
+    <register name="DC_LDL" number="0x49" mask="0xFFFFFFFF" access="WO"
+              description="Lock Data Line" />	
+    <register name="DC_IVDL" number="0x4A" mask="0xFFFFFFFF" access="WO"
+              description="Invalidate Data Line" />
+    <register name="DC_FLDL" number="0x4C" mask="0xFFFFFFFF" access="WO"
+              description="Flush Data Line" />
+    <register name="DC_RAM_ADDR" number="0x58" mask="0xFFFFFFFF" access="RW"
+              description="Data cache external access" />
+    <register name="DC_TAG" number="0x59" mask="0xFFFFFFFF" access="RW"
+              description="Data cache tag access" />
+    <register name="DC_DATA" number="0x5B" mask="0xFFFFFFFF" access="RW"
+              description="Data cache data access" />
+
+    <register name="AUX_ICCM" number="0x208" mask="0xFF000000" access="RW"
+              description="Base address of multiple ICCMs" />
+    <register name="AUX_DCCM" number="0x18" mask="0xF0000000" access="RW"
+              description="Start address of the DCCM" />
+
+    <register name="SMART_CONTROL" number="0x700" mask="0xFFFFFF01" access="RW"
+        description="SmaRT control register">
+        <field name="EN" description="enable" size="1" offset="0" acces="RW" />
+        <field name="IDX" description="location index" size="2" offset="8" acces="RW" />
+        <field name="LOCATION_POINTER" description="stack location pointer"  size="21" offset="10" acces="RW" />
+    </register>
+    <register name="SMART_DATA" number="0x701" mask="0xFFFFFFFF" access="RO"
+        description="SmaRT data register" />
+
+    <register name="AUX_IRQ_CTRL" number="0xE" mask="0x00002E1F" access="RW"
+        description="Interrupt Context Saving Control Register">
+        <field name="NR" size="5" offset="0"  access="RW" description="Number of GP reg pair saved" />
+        <field name="B"  size="1" offset="9"  access="RW" description="Whether to save and restore BLINK" />
+        <field name="L"  size="1" offset="10" access="RW" description="whether to save and restore loop registers" />
+        <field name="U"  size="1" offset="11" access="RW" description="If user context is saved to user stack" />
+        <field name="LP" size="1" offset="13" access="RW"
+            description="whether to save and restore code-density registers" />
+    </register>
+	<register name="IRQ_PRIORITY_PENDING" description="Interrupt Priority Pending Register"
+		number="0x200" mask="0x1" access="RO" />
+    <register name="AUX_IRQ_ACT" description="Active Interrupts Register" number="0x43"
+        mask ="0x8000FFFF" access="RW">
+        <field name="A"  description="Active" size="16"  offset= "0" access="RW" />
+        <field name="U"  description="snapshot" size="1"  offset= "31" access="RO" />
+    </register>
+    <register name="IRQ_SELECT" description="Interrupt select" number="0x40B" mask="0x7F" access="RW" />
+    <register name="IRQ_PRIORITY" description="Interrupt priority" number="0x206" mask="0x1F" access="RW" />
+    <register name="IRQ_ENABLE" description="Interrupt enable" number="0x40C" mask="0x1" access="RW" />
+    <register name="IRQ_TRIGGER" description="Interrupt trigger" number="0x40D" mask="0x1" access="RW" />
+    <register name="IRQ_PENDING" description="Interrupt pending" number="0x416" mask="0x1" access="RO" />
+    <register name="IRQ_PULSE_CANCEL" description="Interrupt pulse cancel" number="0x415" mask="0x1" access="WO" />
+    <register name="IRQ_STATUS" description="Interrupt status" number="0x40F" mask="0x8000003F" access="RO">
+        <field name="P"  size="4" offset="0"  access="RO" description="irq priority" />
+        <field name="E"  size="1" offset="4"  access="RO" description="irq enable" />
+        <field name="T"  size="1" offset="5"  access="RO" description="irq trigger" />
+        <field name="IP" size="1" offset="31" access="RO" description="irq pending" />
+    </register>
+    <register name="AUX_IRQ_HINT"         description="Software Triggered Interrupt"                number="0x201" mask ="0x0000001F" access="RW"/>
+    <register name="ICAUSE" description="Interrupt cause" number="0x40A" mask ="0xFF" access="RO"/>
+    <!-- no stack checking in EM Starter Kit -->
+    <register name="AUX_USER_SP" number="0xD" mask="0xFFFFFFFF" access="RW"
+        description="Saved User Stack Pointer" />
+
+    <register name="AMV0"                description="Actionpoint 0 Match Value Register"           number="0x220" mask ="0xFFFFFFFF" access="RW"/>
+    <register name="AMM0"                description="Actionpoint 0 Match Mask Register"            number="0x221" mask ="0xFFFFFFFF" access="RW"/>
+    <register name="AC0"                 description="Actionpoint 0 Control Register"               number="0x222" mask ="0xFFFFFFFF" access="RW"/>
+
+    <!-- Build Configuration Registers -->
+    <!-- BCR:baseline -->
+    <bcr name="BCR_VER"          description="Build Configuration Registers version"  number="0x60" mask="0xFF"/>
+    <bcr name="BTA_LINK_BUILD"   description="Build configuration for: BTA Registers" number="0x63" mask="0x1"/>
+    <bcr name="VECBASE_AC_BUILD" description="Interrupt Vector Base BCR"              number="0x68" mask="0xFFFFFFFC"/> 
+    <bcr name="RF_BUILD"         description="Core Registers BCR"                     number="0x6E" mask="0xFFFF"/>
+    <bcr name="ISA_CONFIG"       description="Instruction Set Configuration"          number="0xC1" mask="0xFFFFFFFF"/>
+    <bcr name="D_CACHE_BUILD"    description="Data cache build register"              number="0x72" mask="0x07FFFFFF"/>
+    <bcr name="DCCM_BUILD"       description="Data Closely Coupled Memory BCR"        number="0x74" mask="0xFFF"/>
+    <bcr name="SMART_BUILD"      description="SmaRT BCR"                              number="0xFF" mask="0xFFFFFCFF"/>
+    <bcr name="TIMER_BUILD"      description="Timers BCR"                             number="0x75" mask="0x00FF07FF"/>
+    <bcr name="AP_BUILD"         description="Actionpoints BCR"                       number="0x76" mask="0x00000FFF"/>
+    <bcr name="I_CACHE_BUILD"    description="Instruction Cache BCR"                  number="0x77" mask="0x007FFFFF"/>
+    <bcr name="ICCM_BUILD"       description="Instruction Closely Coupled Memory BCR" number="0x78" mask="0xFFFF"/>
+    <bcr name="MULTIPLY_BUILD"   description="(32 X 32) Multiply Unit BCR"            number="0x7B" mask="0xFFFFFFFF"/>
+    <bcr name="SWAP_BUILD"       description="SWAP BCR"                               number="0x7C" mask="0xFF"/>
+    <bcr name="NORM_BUILD"       description="NORM Unit BCR"                          number="0x7D" mask="0xFF"/>
+    <bcr name="MINMAX_BUILD"     description="Minmax Unit BCR"                        number="0x7E" mask="0xFF"/>
+    <bcr name="BARREL_BUILD"     description="Barrel Shifter BCR"                     number="0x7F" mask="0x3FF"/> 
+    <bcr name="IRQ_BUILD"        description="Interrupt BCR"                          number="0xF3" mask="0x1FFFFFFF" />
+</feature>
+</target>
